# rotation_projects

./: README.md  scf.cpp
hf_ueg/: CMakeLists.txt  CMakePresets.json
hf_ueg/calcs/: rhf.ipynb
hf_ueg/docs/: cholesky.aux  cholesky.out  cholesky.tex  computations.ipynb  theory.aux  theory.out  theory.tex
hf_ueg/include/: basis.h  matrix_utils.h  rhf.h  scf.h  uhf.h
hf_ueg/plt/: affirm_me_comparison_results.txt  scf.ipynb  scf_dimension.txt  scf_final_energies.txt  scf_id.txt  scf_iterations.txt  scf_ld.txt  scf_results.txt  scf_results_dense.txt
hf_ueg/src/: basis.cpp  main.cpp  main_2d.cpp  main_rhf.cpp  matrix_utils.cpp  rhf.cpp  scf.cpp  uhf.cpp
hf_ueg/uhf/: master_uhf.cpp  uhf.cpp
hubbard_pyscf/: uhf.py
latex/: proof.aux  proof.out  proof.tex
